# upul_ecom/apps/api/src/product-service/product.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { createProduct, getAllProducts ,getProductBySku , updateProductBySku ,toggleVisibility , deleteProduct} from './product.controller';
 import {  getShopProducts } from './shop.controller';
+import {getInventory , bulkUpdateInventory} from "../inventory-service/inventory.controller";
 
 const router = Router();
 router.get('/shop', getShopProducts);
@@ -12,8 +13,7 @@ router.put("/:sku", updateProductBySku);
 router.patch("/:sku/visibility", toggleVisibility);
 router.delete("/:sku", deleteProduct);
 
-
-
-
+router.get("/inventory/list", getInventory);
+router.patch("/inventory/bulk-update", bulkUpdateInventory);
 
 export default router;
