# upul_ecom/apps/api/src/swagger-output.json
@@ -443,13 +443,7 @@
                 "price": {
                   "example": "any"
                 },
-                "isNewArrival": {
-                  "example": "any"
-                },
-                "discountType": {
-                  "example": "any"
-                },
-                "discountValue": {
+                "visible": {
                   "example": "any"
                 },
                 "brand": {
@@ -467,7 +461,13 @@
                 "sizeType": {
                   "example": "any"
                 },
-                "visible": {
+                "discountType": {
+                  "example": "any"
+                },
+                "discountValue": {
+                  "example": "any"
+                },
+                "isNewArrival": {
                   "example": "any"
                 }
               }
@@ -549,9 +549,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "visible": {
-                  "example": "any"
-                },
                 "name": {
                   "example": "any"
                 },
@@ -583,6 +580,9 @@
                   "example": "any"
                 },
                 "sizeType": {
+                  "example": "any"
+                },
+                "visible": {
                   "example": "any"
                 }
               }
@@ -629,6 +629,59 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/products/inventory/list": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "search",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/products/inventory/update": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "sku": {
+                  "example": "any"
+                },
+                "variantSize": {
+                  "example": "any"
+                },
+                "newStock": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
